# proxmox-pvenom

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.MD
docs/: mandalore-guests.json  pvenom-v0.99-cli-specs.txt
src/: client.rs  commands.rs  main.rs  models.rs  vlog.rs
