[package]
name = "pvenom"
version = "0.1.0"
edition = "2021"
authors = ["Francesco <francescogarbin@gmail.com>"]
description = "Proxmox Virtual Environment Node Observability Monitor"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
comfy-table = "7.1"
